// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Acquisition Events API stack matches the snapshot 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuDistributionBucketParameter",
      "GuApiLambda",
      "GuApiGateway5xxPercentageAlarm",
      "GuAlarm",
    ],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "discountapilambdaacquisitioneventsapiCODEEndpoint8CC7C02E": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "discountapilambdaacquisitioneventsapiCODEBE52DC33",
            },
            ".execute-api.",
            {
              "Ref": "AWS::Region",
            },
            ".",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "discountapilambdaacquisitioneventsapiCODEDeploymentStageprod4BE37FE1",
            },
            "/",
          ],
        ],
      },
    },
  },
  "Parameters": {
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "ApiGateway4XXAlarmCDKC83EACCA": {
      "Properties": {
        "ActionsEnabled": false,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":contributions-dev",
              ],
            ],
          },
        ],
        "AlarmDescription": "Impact - Acquisition Events API received an invalid request. Follow the process in https://docs.google.com/document/d/1_3El3cly9d7u_jPgTcRjLxmdG2e919zCLvmcFCLOYAk/edit",
        "AlarmName": "ACQUISITION-EVENTS-API-CDK- CODE API gateway 4XX response",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "ApiName",
            "Value": "acquisition-events-api-CODE",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "4XXError",
        "Namespace": "AWS/ApiGateway",
        "Period": 300,
        "Statistic": "Sum",
        "Threshold": 1,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ApiGatewayHigh5xxPercentageAlarmAcquisitioneventsapi36134E2A": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":conversion-dev",
              ],
            ],
          },
        ],
        "AlarmDescription": "acquisition-events-api exceeded 5% error rate",
        "AlarmName": "High 5XX error % from acquisition-events-api (ApiGateway) in CODE",
        "ComparisonOperator": "GreaterThanThreshold",
        "EvaluationPeriods": 1,
        "Metrics": [
          {
            "Expression": "100*m1/m2",
            "Id": "expr_1",
            "Label": "% of 5XX responses served for acquisition-events-api",
          },
          {
            "Id": "m1",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "ApiName",
                    "Value": "membership-CODE-acquisition-events-api-CODE",
                  },
                ],
                "MetricName": "5XXError",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 60,
              "Stat": "Sum",
            },
            "ReturnData": false,
          },
          {
            "Id": "m2",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "ApiName",
                    "Value": "membership-CODE-acquisition-events-api-CODE",
                  },
                ],
                "MetricName": "Count",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 60,
              "Stat": "SampleCount",
            },
            "ReturnData": false,
          },
        ],
        "Threshold": 5,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "BasePathMapping": {
      "Properties": {
        "DomainName": {
          "Ref": "DomainName",
        },
        "RestApiId": {
          "Ref": "discountapilambdaacquisitioneventsapiCODEBE52DC33",
        },
        "Stage": {
          "Ref": "discountapilambdaacquisitioneventsapiCODEDeploymentStageprod4BE37FE1",
        },
      },
      "Type": "AWS::ApiGateway::BasePathMapping",
    },
    "DNSRecord": {
      "Properties": {
        "HostedZoneId": "Z1E4V12LQGXFEC",
        "Name": "discount-api.code.membership.guardianapis.com",
        "ResourceRecords": [
          {
            "Fn::GetAtt": [
              "DomainName",
              "RegionalDomainName",
            ],
          },
        ],
        "TTL": "120",
        "Type": "CNAME",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "DomainName": {
      "Properties": {
        "DomainName": "discount-api.code.membership.guardianapis.com",
        "EndpointConfiguration": {
          "Types": [
            "REGIONAL",
          ],
        },
        "RegionalCertificateArn": {
          "Fn::Join": [
            "",
            [
              "arn:aws:acm:eu-west-1:",
              {
                "Ref": "AWS::AccountId",
              },
              ":certificate/c1efc564-9ff8-4a03-be48-d1990a3d79d2",
            ],
          ],
        },
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::DomainName",
    },
    "S3inlinepolicy3B07399A": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": "arn:aws:s3::*:membership-dist/*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "S3inlinepolicy3B07399A",
        "Roles": [
          {
            "Ref": "discountapilambdaServiceRole4CB5B1F4",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "SSMinlinepolicyB56CB2A2": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/acquisition-events-api/bigquery-config/CODE/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "SSMinlinepolicyB56CB2A2",
        "Roles": [
          {
            "Ref": "discountapilambdaServiceRole4CB5B1F4",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "discountapilambda972ABED6": {
      "DependsOn": [
        "discountapilambdaServiceRoleDefaultPolicy91B9A9BA",
        "discountapilambdaServiceRole4CB5B1F4",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "membership/CODE/acquisition-events-api/acquisition-events-api.zip",
        },
        "Description": "A lambda that enables the addition of discounts to existing subscriptions",
        "Environment": {
          "Variables": {
            "APP": "acquisition-events-api",
            "App": "acquisition-events-api",
            "STACK": "membership",
            "STAGE": "CODE",
            "Stack": "membership",
            "Stage": "CODE",
          },
        },
        "FunctionName": "acquisition-events-api-cdk-CODE",
        "Handler": "com.gu.discountApi.Lambda::handler",
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "discountapilambdaServiceRole4CB5B1F4",
            "Arn",
          ],
        },
        "Runtime": "java8",
        "Tags": [
          {
            "Key": "App",
            "Value": "acquisition-events-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "discountapilambdaServiceRole4CB5B1F4": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "acquisition-events-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "discountapilambdaServiceRoleDefaultPolicy91B9A9BA": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/membership/CODE/acquisition-events-api/acquisition-events-api.zip",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/membership/acquisition-events-api",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/membership/acquisition-events-api/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "discountapilambdaServiceRoleDefaultPolicy91B9A9BA",
        "Roles": [
          {
            "Ref": "discountapilambdaServiceRole4CB5B1F4",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "discountapilambdaacquisitioneventsapiCODEANYApiPermissionTestdiscountapiCODEdiscountapilambdaacquisitioneventsapiCODE7FDA8393ANY965AF6DA": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "discountapilambda972ABED6",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "discountapilambdaacquisitioneventsapiCODEBE52DC33",
              },
              "/test-invoke-stage/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "discountapilambdaacquisitioneventsapiCODEANYApiPermissiondiscountapiCODEdiscountapilambdaacquisitioneventsapiCODE7FDA8393ANY6AA25813": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "discountapilambda972ABED6",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "discountapilambdaacquisitioneventsapiCODEBE52DC33",
              },
              "/",
              {
                "Ref": "discountapilambdaacquisitioneventsapiCODEDeploymentStageprod4BE37FE1",
              },
              "/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "discountapilambdaacquisitioneventsapiCODEANYC4C0BE3D": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "discountapilambda972ABED6",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Fn::GetAtt": [
            "discountapilambdaacquisitioneventsapiCODEBE52DC33",
            "RootResourceId",
          ],
        },
        "RestApiId": {
          "Ref": "discountapilambdaacquisitioneventsapiCODEBE52DC33",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "discountapilambdaacquisitioneventsapiCODEAccountACC2500D": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "discountapilambdaacquisitioneventsapiCODEBE52DC33",
      ],
      "Properties": {
        "CloudWatchRoleArn": {
          "Fn::GetAtt": [
            "discountapilambdaacquisitioneventsapiCODECloudWatchRole579CEC55",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
      "UpdateReplacePolicy": "Retain",
    },
    "discountapilambdaacquisitioneventsapiCODEBE52DC33": {
      "Properties": {
        "Description": "API Gateway created by CDK",
        "Name": "membership-CODE-acquisition-events-api-CODE",
        "Tags": [
          {
            "Key": "App",
            "Value": "acquisition-events-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "discountapilambdaacquisitioneventsapiCODECloudWatchRole579CEC55": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "acquisition-events-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
      "UpdateReplacePolicy": "Retain",
    },
    "discountapilambdaacquisitioneventsapiCODEDeployment3D9F96002af3bec98f576c79c3b94b5f05e3c38b": {
      "DependsOn": [
        "discountapilambdaacquisitioneventsapiCODEproxyANY88476B63",
        "discountapilambdaacquisitioneventsapiCODEproxyB11F0BA4",
        "discountapilambdaacquisitioneventsapiCODEANYC4C0BE3D",
      ],
      "Properties": {
        "Description": "API Gateway created by CDK",
        "RestApiId": {
          "Ref": "discountapilambdaacquisitioneventsapiCODEBE52DC33",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "discountapilambdaacquisitioneventsapiCODEDeploymentStageprod4BE37FE1": {
      "DependsOn": [
        "discountapilambdaacquisitioneventsapiCODEAccountACC2500D",
      ],
      "Properties": {
        "DeploymentId": {
          "Ref": "discountapilambdaacquisitioneventsapiCODEDeployment3D9F96002af3bec98f576c79c3b94b5f05e3c38b",
        },
        "RestApiId": {
          "Ref": "discountapilambdaacquisitioneventsapiCODEBE52DC33",
        },
        "StageName": "prod",
        "Tags": [
          {
            "Key": "App",
            "Value": "acquisition-events-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "discountapilambdaacquisitioneventsapiCODEproxyANY88476B63": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "discountapilambda972ABED6",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "discountapilambdaacquisitioneventsapiCODEproxyB11F0BA4",
        },
        "RestApiId": {
          "Ref": "discountapilambdaacquisitioneventsapiCODEBE52DC33",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "discountapilambdaacquisitioneventsapiCODEproxyANYApiPermissionTestdiscountapiCODEdiscountapilambdaacquisitioneventsapiCODE7FDA8393ANYproxy0AF6FCE5": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "discountapilambda972ABED6",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "discountapilambdaacquisitioneventsapiCODEBE52DC33",
              },
              "/test-invoke-stage/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "discountapilambdaacquisitioneventsapiCODEproxyANYApiPermissiondiscountapiCODEdiscountapilambdaacquisitioneventsapiCODE7FDA8393ANYproxyA40B4D00": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "discountapilambda972ABED6",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "discountapilambdaacquisitioneventsapiCODEBE52DC33",
              },
              "/",
              {
                "Ref": "discountapilambdaacquisitioneventsapiCODEDeploymentStageprod4BE37FE1",
              },
              "/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "discountapilambdaacquisitioneventsapiCODEproxyB11F0BA4": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "discountapilambdaacquisitioneventsapiCODEBE52DC33",
            "RootResourceId",
          ],
        },
        "PathPart": "{proxy+}",
        "RestApiId": {
          "Ref": "discountapilambdaacquisitioneventsapiCODEBE52DC33",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
  },
}
`;

exports[`The Acquisition Events API stack matches the snapshot 2`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuDistributionBucketParameter",
      "GuApiLambda",
      "GuApiGateway5xxPercentageAlarm",
      "GuAlarm",
    ],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "discountapilambdaacquisitioneventsapiPRODEndpoint30763F53": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "discountapilambdaacquisitioneventsapiPROD4FC0F3B9",
            },
            ".execute-api.",
            {
              "Ref": "AWS::Region",
            },
            ".",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "discountapilambdaacquisitioneventsapiPRODDeploymentStageprod39AD0729",
            },
            "/",
          ],
        ],
      },
    },
  },
  "Parameters": {
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "ApiGateway4XXAlarmCDKC83EACCA": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":contributions-dev",
              ],
            ],
          },
        ],
        "AlarmDescription": "Impact - Acquisition Events API received an invalid request. Follow the process in https://docs.google.com/document/d/1_3El3cly9d7u_jPgTcRjLxmdG2e919zCLvmcFCLOYAk/edit",
        "AlarmName": "ACQUISITION-EVENTS-API-CDK- PROD API gateway 4XX response",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "ApiName",
            "Value": "acquisition-events-api-PROD",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "4XXError",
        "Namespace": "AWS/ApiGateway",
        "Period": 300,
        "Statistic": "Sum",
        "Threshold": 1,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ApiGatewayHigh5xxPercentageAlarmAcquisitioneventsapi36134E2A": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":conversion-dev",
              ],
            ],
          },
        ],
        "AlarmDescription": "acquisition-events-api exceeded 5% error rate",
        "AlarmName": "High 5XX error % from acquisition-events-api (ApiGateway) in PROD",
        "ComparisonOperator": "GreaterThanThreshold",
        "EvaluationPeriods": 1,
        "Metrics": [
          {
            "Expression": "100*m1/m2",
            "Id": "expr_1",
            "Label": "% of 5XX responses served for acquisition-events-api",
          },
          {
            "Id": "m1",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "ApiName",
                    "Value": "membership-PROD-acquisition-events-api-PROD",
                  },
                ],
                "MetricName": "5XXError",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 60,
              "Stat": "Sum",
            },
            "ReturnData": false,
          },
          {
            "Id": "m2",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "ApiName",
                    "Value": "membership-PROD-acquisition-events-api-PROD",
                  },
                ],
                "MetricName": "Count",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 60,
              "Stat": "SampleCount",
            },
            "ReturnData": false,
          },
        ],
        "Threshold": 5,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "BasePathMapping": {
      "Properties": {
        "DomainName": {
          "Ref": "DomainName",
        },
        "RestApiId": {
          "Ref": "discountapilambdaacquisitioneventsapiPROD4FC0F3B9",
        },
        "Stage": {
          "Ref": "discountapilambdaacquisitioneventsapiPRODDeploymentStageprod39AD0729",
        },
      },
      "Type": "AWS::ApiGateway::BasePathMapping",
    },
    "DNSRecord": {
      "Properties": {
        "HostedZoneId": "Z1E4V12LQGXFEC",
        "Name": "discount-api.membership.guardianapis.com",
        "ResourceRecords": [
          {
            "Fn::GetAtt": [
              "DomainName",
              "RegionalDomainName",
            ],
          },
        ],
        "TTL": "120",
        "Type": "CNAME",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "DomainName": {
      "Properties": {
        "DomainName": "discount-api.membership.guardianapis.com",
        "EndpointConfiguration": {
          "Types": [
            "REGIONAL",
          ],
        },
        "RegionalCertificateArn": {
          "Fn::Join": [
            "",
            [
              "arn:aws:acm:eu-west-1:",
              {
                "Ref": "AWS::AccountId",
              },
              ":certificate/c1efc564-9ff8-4a03-be48-d1990a3d79d2",
            ],
          ],
        },
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::DomainName",
    },
    "S3inlinepolicy3B07399A": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": "arn:aws:s3::*:membership-dist/*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "S3inlinepolicy3B07399A",
        "Roles": [
          {
            "Ref": "discountapilambdaServiceRole4CB5B1F4",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "SSMinlinepolicyB56CB2A2": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/acquisition-events-api/bigquery-config/PROD/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "SSMinlinepolicyB56CB2A2",
        "Roles": [
          {
            "Ref": "discountapilambdaServiceRole4CB5B1F4",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "discountapilambda972ABED6": {
      "DependsOn": [
        "discountapilambdaServiceRoleDefaultPolicy91B9A9BA",
        "discountapilambdaServiceRole4CB5B1F4",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "membership/PROD/acquisition-events-api/acquisition-events-api.zip",
        },
        "Description": "A lambda that enables the addition of discounts to existing subscriptions",
        "Environment": {
          "Variables": {
            "APP": "acquisition-events-api",
            "App": "acquisition-events-api",
            "STACK": "membership",
            "STAGE": "PROD",
            "Stack": "membership",
            "Stage": "PROD",
          },
        },
        "FunctionName": "acquisition-events-api-cdk-PROD",
        "Handler": "com.gu.discountApi.Lambda::handler",
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "discountapilambdaServiceRole4CB5B1F4",
            "Arn",
          ],
        },
        "Runtime": "java8",
        "Tags": [
          {
            "Key": "App",
            "Value": "acquisition-events-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "discountapilambdaServiceRole4CB5B1F4": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "acquisition-events-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "discountapilambdaServiceRoleDefaultPolicy91B9A9BA": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/membership/PROD/acquisition-events-api/acquisition-events-api.zip",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/membership/acquisition-events-api",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/membership/acquisition-events-api/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "discountapilambdaServiceRoleDefaultPolicy91B9A9BA",
        "Roles": [
          {
            "Ref": "discountapilambdaServiceRole4CB5B1F4",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "discountapilambdaacquisitioneventsapiPROD4FC0F3B9": {
      "Properties": {
        "Description": "API Gateway created by CDK",
        "Name": "membership-PROD-acquisition-events-api-PROD",
        "Tags": [
          {
            "Key": "App",
            "Value": "acquisition-events-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "discountapilambdaacquisitioneventsapiPRODANYApiPermissionTestdiscountapiPRODdiscountapilambdaacquisitioneventsapiPROD8D8DB043ANYD60E3127": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "discountapilambda972ABED6",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "discountapilambdaacquisitioneventsapiPROD4FC0F3B9",
              },
              "/test-invoke-stage/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "discountapilambdaacquisitioneventsapiPRODANYApiPermissiondiscountapiPRODdiscountapilambdaacquisitioneventsapiPROD8D8DB043ANY60F9937B": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "discountapilambda972ABED6",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "discountapilambdaacquisitioneventsapiPROD4FC0F3B9",
              },
              "/",
              {
                "Ref": "discountapilambdaacquisitioneventsapiPRODDeploymentStageprod39AD0729",
              },
              "/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "discountapilambdaacquisitioneventsapiPRODANYC0B4150E": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "discountapilambda972ABED6",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Fn::GetAtt": [
            "discountapilambdaacquisitioneventsapiPROD4FC0F3B9",
            "RootResourceId",
          ],
        },
        "RestApiId": {
          "Ref": "discountapilambdaacquisitioneventsapiPROD4FC0F3B9",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "discountapilambdaacquisitioneventsapiPRODAccount7786F6DC": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "discountapilambdaacquisitioneventsapiPROD4FC0F3B9",
      ],
      "Properties": {
        "CloudWatchRoleArn": {
          "Fn::GetAtt": [
            "discountapilambdaacquisitioneventsapiPRODCloudWatchRole50BA9441",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
      "UpdateReplacePolicy": "Retain",
    },
    "discountapilambdaacquisitioneventsapiPRODCloudWatchRole50BA9441": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "acquisition-events-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
      "UpdateReplacePolicy": "Retain",
    },
    "discountapilambdaacquisitioneventsapiPRODDeploymentB9178D8Fe68843e96a4884571a4f319b273f48c8": {
      "DependsOn": [
        "discountapilambdaacquisitioneventsapiPRODproxyANY38F7C8F9",
        "discountapilambdaacquisitioneventsapiPRODproxy383AC6EA",
        "discountapilambdaacquisitioneventsapiPRODANYC0B4150E",
      ],
      "Properties": {
        "Description": "API Gateway created by CDK",
        "RestApiId": {
          "Ref": "discountapilambdaacquisitioneventsapiPROD4FC0F3B9",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "discountapilambdaacquisitioneventsapiPRODDeploymentStageprod39AD0729": {
      "DependsOn": [
        "discountapilambdaacquisitioneventsapiPRODAccount7786F6DC",
      ],
      "Properties": {
        "DeploymentId": {
          "Ref": "discountapilambdaacquisitioneventsapiPRODDeploymentB9178D8Fe68843e96a4884571a4f319b273f48c8",
        },
        "RestApiId": {
          "Ref": "discountapilambdaacquisitioneventsapiPROD4FC0F3B9",
        },
        "StageName": "prod",
        "Tags": [
          {
            "Key": "App",
            "Value": "acquisition-events-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "discountapilambdaacquisitioneventsapiPRODproxy383AC6EA": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "discountapilambdaacquisitioneventsapiPROD4FC0F3B9",
            "RootResourceId",
          ],
        },
        "PathPart": "{proxy+}",
        "RestApiId": {
          "Ref": "discountapilambdaacquisitioneventsapiPROD4FC0F3B9",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "discountapilambdaacquisitioneventsapiPRODproxyANY38F7C8F9": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "discountapilambda972ABED6",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "discountapilambdaacquisitioneventsapiPRODproxy383AC6EA",
        },
        "RestApiId": {
          "Ref": "discountapilambdaacquisitioneventsapiPROD4FC0F3B9",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "discountapilambdaacquisitioneventsapiPRODproxyANYApiPermissionTestdiscountapiPRODdiscountapilambdaacquisitioneventsapiPROD8D8DB043ANYproxyFC8542D5": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "discountapilambda972ABED6",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "discountapilambdaacquisitioneventsapiPROD4FC0F3B9",
              },
              "/test-invoke-stage/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "discountapilambdaacquisitioneventsapiPRODproxyANYApiPermissiondiscountapiPRODdiscountapilambdaacquisitioneventsapiPROD8D8DB043ANYproxy19AB5984": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "discountapilambda972ABED6",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "discountapilambdaacquisitioneventsapiPROD4FC0F3B9",
              },
              "/",
              {
                "Ref": "discountapilambdaacquisitioneventsapiPRODDeploymentStageprod39AD0729",
              },
              "/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
  },
}
`;
